// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SkillsBlock /> renders properly 1`] = `
<div>
  <section
    class="jsx-3396351946 container"
    data-testid="skillsBlock_section"
  >
    <div
      class="jsx-3396351946 wrapper genericMargins"
    >
      <h1
        class="jsx-3953086084 colored"
      >
        Skills
      </h1>
      <ul
        class="jsx-3396351946"
      >
        <li
          class="jsx-3396351946"
          data-testid="skillsBlock_skillItemWrapper"
        >
          <div
            style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
          >
            <img
              alt="Estratégia de Redes Sociais"
              class="imageOpacity"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <strong
            class="jsx-390248359"
          >
            Estratégia de Redes Sociais
          </strong>
          <p
            class="jsx-390248359"
          >
            Realizar uma auditoria e análise detalhada, com base nos insights e objetivos da marca, definindo em que redes sociais a marca deve estar presente e quais as oportunidades disponíveis.
          </p>
        </li>
        <li
          class="jsx-3396351946"
          data-testid="skillsBlock_skillItemWrapper"
        >
          <div
            style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
          >
            <img
              alt="Consultoria de Redes Sociais"
              class="imageOpacity"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <strong
            class="jsx-390248359"
          >
            Consultoria de Redes Sociais
          </strong>
          <p
            class="jsx-390248359"
          >
            Posso ajudar a sua equipa na forma como a marca está presente nas redes sociais, como comunica, como alcançar os objetivos pretendidos e como aproveitar as oportunidades disponíveis no mercado digital do seu negócio.
          </p>
        </li>
        <li
          class="jsx-3396351946"
          data-testid="skillsBlock_skillItemWrapper"
        >
          <div
            style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
          >
            <img
              alt="Gestão de Comunidade"
              class="imageOpacity"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <strong
            class="jsx-390248359"
          >
            Gestão de Comunidade
          </strong>
          <p
            class="jsx-390248359"
          >
            Quando enviamos uma mensagem aos nossos amigos e eles demoram dias a responder-nos não é muito agradável e o mesmo acontece com as marcas. Faço gestão de comunidade, respondendo a mensagens e comentários da sua audiência em prazos toleráveis e ideais.
          </p>
        </li>
        <li
          class="jsx-3396351946"
          data-testid="skillsBlock_skillItemWrapper"
        >
          <div
            style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
          >
            <img
              alt="Paid Social e Search"
              class="imageOpacity"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <strong
            class="jsx-390248359"
          >
            Paid Social e Search
          </strong>
          <p
            class="jsx-390248359"
          >
            Planeio, implemento e acompanho campanhas paid social (redes sociais) e campanhas paid search (anúncios no Google), otimizando os objetivos de marketing da sua marca ou negócio.
          </p>
        </li>
        <li
          class="jsx-3396351946"
          data-testid="skillsBlock_skillItemWrapper"
        >
          <div
            style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
          >
            <img
              alt="Análise e Otimização"
              class="imageOpacity"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <strong
            class="jsx-390248359"
          >
            Análise e Otimização
          </strong>
          <p
            class="jsx-390248359"
          >
            Medir resultados de forma a otimizar a estratégia é a chave para uma presença de sucesso nas redes sociais. Em todos os meus projetos faço uma análise mensal detalhada de forma a existir uma adaptação contínua ao mercado e às exigências dos consumidores.
          </p>
        </li>
        <li
          class="jsx-3396351946"
          data-testid="skillsBlock_skillItemWrapper"
        >
          <div
            style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
          >
            <img
              alt="Criação de Conteúdo"
              class="imageOpacity"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <strong
            class="jsx-390248359"
          >
            Criação de Conteúdo
          </strong>
          <p
            class="jsx-390248359"
          >
            Crio conteúdo (fotográfico, animado, design e vídeo) atrativo e relevante para os consumidores. Ao reunir insights de consumidores e know-how consigo saber o tipo de conteúdo que melhor funciona para cada negócio.
          </p>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`<SkillsBlock /> renders properly in English 1`] = `
<div>
  <section
    class="jsx-3396351946 container"
    data-testid="skillsBlock_section"
  >
    <div
      class="jsx-3396351946 wrapper genericMargins"
    >
      <h1
        class="jsx-3953086084 colored"
      >
        Skills
      </h1>
      <ul
        class="jsx-3396351946"
      >
        <li
          class="jsx-3396351946"
          data-testid="skillsBlock_skillItemWrapper"
        >
          <div
            style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
          >
            <img
              alt="Social Media strategy"
              class="imageOpacity"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <strong
            class="jsx-390248359"
          >
            Social Media strategy
          </strong>
          <p
            class="jsx-390248359"
          >
            Making audits and detailed analysis, based on the brand's insights and goals, deciding in what social networks the brand should be present in and what are the available opportunities.
          </p>
        </li>
        <li
          class="jsx-3396351946"
          data-testid="skillsBlock_skillItemWrapper"
        >
          <div
            style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
          >
            <img
              alt="Social Media consulting"
              class="imageOpacity"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <strong
            class="jsx-390248359"
          >
            Social Media consulting
          </strong>
          <p
            class="jsx-390248359"
          >
            I can help your team in the way your brand is present on social media, how it communicates, how to achieve the intended goals and how to take advantage of the opportunities available in the digital market of your business.
          </p>
        </li>
        <li
          class="jsx-3396351946"
          data-testid="skillsBlock_skillItemWrapper"
        >
          <div
            style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
          >
            <img
              alt="Community Management"
              class="imageOpacity"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <strong
            class="jsx-390248359"
          >
            Community Management
          </strong>
          <p
            class="jsx-390248359"
          >
            When we send a message to our friends and they take days to answer us it is not very pleasant and the same is true with brands. I do community management, responding to messages and comments from your audience within tolerable and ideal deadlines.
          </p>
        </li>
        <li
          class="jsx-3396351946"
          data-testid="skillsBlock_skillItemWrapper"
        >
          <div
            style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
          >
            <img
              alt="Paid Social and Search"
              class="imageOpacity"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <strong
            class="jsx-390248359"
          >
            Paid Social and Search
          </strong>
          <p
            class="jsx-390248359"
          >
            I plan, implement and monitor paid social campaigns (social media) and paid search campaigns (ads on Google), optimizing the marketing objectives of your brand or business.
          </p>
        </li>
        <li
          class="jsx-3396351946"
          data-testid="skillsBlock_skillItemWrapper"
        >
          <div
            style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
          >
            <img
              alt="Optimization and Analysis"
              class="imageOpacity"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <strong
            class="jsx-390248359"
          >
            Optimization and Analysis
          </strong>
          <p
            class="jsx-390248359"
          >
            Measuring results in order to optimize the strategy is the key to a successful presence on social media. In all my projects I do a detailed monthly analysis so that there is a continuous adaptation to the market and to the demands of consumers.
          </p>
        </li>
        <li
          class="jsx-3396351946"
          data-testid="skillsBlock_skillItemWrapper"
        >
          <div
            style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
          >
            <img
              alt="Content creation"
              class="imageOpacity"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <strong
            class="jsx-390248359"
          >
            Content creation
          </strong>
          <p
            class="jsx-390248359"
          >
            I create attractive and relevant content to consumers (photographic, animated, design and video). By gathering consumer insights and know-how, I know the type of content that works best for each business.
          </p>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`<SkillsBlock /> renders properly on mobile 1`] = `
<div>
  <section
    class="jsx-3396351946 container"
    data-testid="skillsBlock_section"
  >
    <div
      class="jsx-3396351946 wrapper genericMargins"
    >
      <h1
        class="jsx-3953086084 colored"
      >
        Skills
      </h1>
      <div
        class="slider"
        style="box-sizing: border-box; display: block; height: inherit; position: relative; width: 100%;"
        tabindex="0"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          style="position: absolute; left: -10000px; width: 1px; height: 1px; overflow: hidden;"
          tabindex="-1"
        >
          Slide 1 of 6
        </div>
        <div
          class="slider-frame"
          style="box-sizing: border-box; display: block; height: 100%; margin: 0px 30px; overflow: hidden; padding: 0px; position: relative; transform: translate3d(0, 0, 0);"
        >
          <ul
            class="slider-list"
            style="box-sizing: border-box; cursor: pointer; display: block; height: 0px; margin: 0px 0px; padding: 0px; position: relative; transform: translate3d(0px, 0px, 0); width: auto; transition: 0s;"
          >
            <li
              class="slider-slide slide-visible slide-current"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="false"
                class="jsx-3396351946 carouselItem"
                data-testid="skillsBlock_skillItemCarousel"
                tabindex="0"
              >
                <div
                  style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
                >
                  <img
                    alt="Estratégia de Redes Sociais"
                    class="imageOpacity"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                </div>
                <strong
                  class="jsx-390248359"
                >
                  Estratégia de Redes Sociais
                </strong>
                <p
                  class="jsx-390248359"
                >
                  Realizar uma auditoria e análise detalhada, com base nos insights e objetivos da marca, definindo em que redes sociais a marca deve estar presente e quais as oportunidades disponíveis.
                </p>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-3396351946 carouselItem"
                data-testid="skillsBlock_skillItemCarousel"
              >
                <div
                  style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
                >
                  <img
                    alt="Consultoria de Redes Sociais"
                    class="imageOpacity"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                </div>
                <strong
                  class="jsx-390248359"
                >
                  Consultoria de Redes Sociais
                </strong>
                <p
                  class="jsx-390248359"
                >
                  Posso ajudar a sua equipa na forma como a marca está presente nas redes sociais, como comunica, como alcançar os objetivos pretendidos e como aproveitar as oportunidades disponíveis no mercado digital do seu negócio.
                </p>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-3396351946 carouselItem"
                data-testid="skillsBlock_skillItemCarousel"
              >
                <div
                  style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
                >
                  <img
                    alt="Gestão de Comunidade"
                    class="imageOpacity"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                </div>
                <strong
                  class="jsx-390248359"
                >
                  Gestão de Comunidade
                </strong>
                <p
                  class="jsx-390248359"
                >
                  Quando enviamos uma mensagem aos nossos amigos e eles demoram dias a responder-nos não é muito agradável e o mesmo acontece com as marcas. Faço gestão de comunidade, respondendo a mensagens e comentários da sua audiência em prazos toleráveis e ideais.
                </p>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-3396351946 carouselItem"
                data-testid="skillsBlock_skillItemCarousel"
              >
                <div
                  style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
                >
                  <img
                    alt="Paid Social e Search"
                    class="imageOpacity"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                </div>
                <strong
                  class="jsx-390248359"
                >
                  Paid Social e Search
                </strong>
                <p
                  class="jsx-390248359"
                >
                  Planeio, implemento e acompanho campanhas paid social (redes sociais) e campanhas paid search (anúncios no Google), otimizando os objetivos de marketing da sua marca ou negócio.
                </p>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-3396351946 carouselItem"
                data-testid="skillsBlock_skillItemCarousel"
              >
                <div
                  style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
                >
                  <img
                    alt="Análise e Otimização"
                    class="imageOpacity"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                </div>
                <strong
                  class="jsx-390248359"
                >
                  Análise e Otimização
                </strong>
                <p
                  class="jsx-390248359"
                >
                  Medir resultados de forma a otimizar a estratégia é a chave para uma presença de sucesso nas redes sociais. Em todos os meus projetos faço uma análise mensal detalhada de forma a existir uma adaptação contínua ao mercado e às exigências dos consumidores.
                </p>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-3396351946 carouselItem"
                data-testid="skillsBlock_skillItemCarousel"
              >
                <div
                  style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
                >
                  <img
                    alt="Criação de Conteúdo"
                    class="imageOpacity"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                </div>
                <strong
                  class="jsx-390248359"
                >
                  Criação de Conteúdo
                </strong>
                <p
                  class="jsx-390248359"
                >
                  Crio conteúdo (fotográfico, animado, design e vídeo) atrativo e relevante para os consumidores. Ao reunir insights de consumidores e know-how consigo saber o tipo de conteúdo que melhor funciona para cada negócio.
                </p>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="slider-control-centerleft"
          style="position: absolute; top: 50%; left: 0px; transform: translateY(-50%);"
        >
          <button
            aria-label="previous slide"
            class="jsx-900462622"
            data-testid="nukaCarousel_previousSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
              />
            </svg>
          </button>
        </div>
        <div
          class="slider-control-centerright"
          style="position: absolute; top: 50%; right: 0px; transform: translateY(-50%);"
        >
          <button
            aria-label="next slide"
            class="jsx-900462622"
            data-testid="nukaCarousel_nextSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              />
            </svg>
          </button>
        </div>
        <style
          type="text/css"
        >
          .slider-slide &gt; img { width: 100%; display: block; }
          .slider-slide &gt; img:focus { margin: auto; }
        </style>
      </div>
    </div>
  </section>
</div>
`;

exports[`<SkillsBlock /> renders properly on tablet 1`] = `
<div>
  <section
    class="jsx-3396351946 container"
    data-testid="skillsBlock_section"
  >
    <div
      class="jsx-3396351946 wrapper genericMargins"
    >
      <h1
        class="jsx-3953086084 colored"
      >
        Skills
      </h1>
      <div
        class="slider"
        style="box-sizing: border-box; display: block; height: inherit; position: relative; width: 90%;"
        tabindex="0"
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          style="position: absolute; left: -10000px; width: 1px; height: 1px; overflow: hidden;"
          tabindex="-1"
        >
          Slide 1 of 6
        </div>
        <div
          class="slider-frame"
          style="box-sizing: border-box; display: block; height: 100%; margin: 0px 30px; overflow: hidden; padding: 0px; position: relative; transform: translate3d(0, 0, 0);"
        >
          <ul
            class="slider-list"
            style="box-sizing: border-box; cursor: pointer; display: block; height: 0px; margin: 0px 0px; padding: 0px; position: relative; transform: translate3d(0px, 0px, 0); width: auto; transition: 0s;"
          >
            <li
              class="slider-slide slide-visible slide-current"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="false"
                class="jsx-3396351946 carouselItem"
                data-testid="skillsBlock_skillItemCarousel"
                tabindex="0"
              >
                <div
                  style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
                >
                  <img
                    alt="Estratégia de Redes Sociais"
                    class="imageOpacity"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                </div>
                <strong
                  class="jsx-390248359"
                >
                  Estratégia de Redes Sociais
                </strong>
                <p
                  class="jsx-390248359"
                >
                  Realizar uma auditoria e análise detalhada, com base nos insights e objetivos da marca, definindo em que redes sociais a marca deve estar presente e quais as oportunidades disponíveis.
                </p>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-3396351946 carouselItem"
                data-testid="skillsBlock_skillItemCarousel"
              >
                <div
                  style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
                >
                  <img
                    alt="Consultoria de Redes Sociais"
                    class="imageOpacity"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                </div>
                <strong
                  class="jsx-390248359"
                >
                  Consultoria de Redes Sociais
                </strong>
                <p
                  class="jsx-390248359"
                >
                  Posso ajudar a sua equipa na forma como a marca está presente nas redes sociais, como comunica, como alcançar os objetivos pretendidos e como aproveitar as oportunidades disponíveis no mercado digital do seu negócio.
                </p>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-3396351946 carouselItem"
                data-testid="skillsBlock_skillItemCarousel"
              >
                <div
                  style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
                >
                  <img
                    alt="Gestão de Comunidade"
                    class="imageOpacity"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                </div>
                <strong
                  class="jsx-390248359"
                >
                  Gestão de Comunidade
                </strong>
                <p
                  class="jsx-390248359"
                >
                  Quando enviamos uma mensagem aos nossos amigos e eles demoram dias a responder-nos não é muito agradável e o mesmo acontece com as marcas. Faço gestão de comunidade, respondendo a mensagens e comentários da sua audiência em prazos toleráveis e ideais.
                </p>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-3396351946 carouselItem"
                data-testid="skillsBlock_skillItemCarousel"
              >
                <div
                  style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
                >
                  <img
                    alt="Paid Social e Search"
                    class="imageOpacity"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                </div>
                <strong
                  class="jsx-390248359"
                >
                  Paid Social e Search
                </strong>
                <p
                  class="jsx-390248359"
                >
                  Planeio, implemento e acompanho campanhas paid social (redes sociais) e campanhas paid search (anúncios no Google), otimizando os objetivos de marketing da sua marca ou negócio.
                </p>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-3396351946 carouselItem"
                data-testid="skillsBlock_skillItemCarousel"
              >
                <div
                  style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
                >
                  <img
                    alt="Análise e Otimização"
                    class="imageOpacity"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                </div>
                <strong
                  class="jsx-390248359"
                >
                  Análise e Otimização
                </strong>
                <p
                  class="jsx-390248359"
                >
                  Medir resultados de forma a otimizar a estratégia é a chave para uma presença de sucesso nas redes sociais. Em todos os meus projetos faço uma análise mensal detalhada de forma a existir uma adaptação contínua ao mercado e às exigências dos consumidores.
                </p>
              </div>
            </li>
            <li
              class="slider-slide"
              inert="true"
              style="box-sizing: border-box; display: inline-block; height: auto; left: 0px; list-style-type: none; margin: auto 0px auto 0px; position: absolute; top: 0px; transform: scale(1); transition: transform .4s linear; vertical-align: top; width: 0px;"
              tabindex="-1"
            >
              <div
                aria-hidden="true"
                class="jsx-3396351946 carouselItem"
                data-testid="skillsBlock_skillItemCarousel"
              >
                <div
                  style="overflow: hidden; box-sizing: border-box; display: inline-block; position: relative; width: 160px; height: 130px;"
                >
                  <img
                    alt="Criação de Conteúdo"
                    class="imageOpacity"
                    decoding="async"
                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                    style="visibility: hidden; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                  />
                </div>
                <strong
                  class="jsx-390248359"
                >
                  Criação de Conteúdo
                </strong>
                <p
                  class="jsx-390248359"
                >
                  Crio conteúdo (fotográfico, animado, design e vídeo) atrativo e relevante para os consumidores. Ao reunir insights de consumidores e know-how consigo saber o tipo de conteúdo que melhor funciona para cada negócio.
                </p>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="slider-control-centerleft"
          style="position: absolute; top: 50%; left: 0px; transform: translateY(-50%);"
        >
          <button
            aria-label="previous slide"
            class="jsx-900462622"
            data-testid="nukaCarousel_previousSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
              />
            </svg>
          </button>
        </div>
        <div
          class="slider-control-centerright"
          style="position: absolute; top: 50%; right: 0px; transform: translateY(-50%);"
        >
          <button
            aria-label="next slide"
            class="jsx-900462622"
            data-testid="nukaCarousel_nextSlideButton"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 320 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
              />
            </svg>
          </button>
        </div>
        <style
          type="text/css"
        >
          .slider-slide &gt; img { width: 100%; display: block; }
          .slider-slide &gt; img:focus { margin: auto; }
        </style>
      </div>
    </div>
  </section>
</div>
`;
